--- a/app/views/deals/_body_most_reviewed_pc.html.erb
+++ b/app/views/deals/_body_most_reviewed_pc.html.erb
@@ -2,6 +2,25 @@
 <a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" class="overlay-img" /><p>Title</p></a>
 </div> -->
 
+<div class="filter-node most_box" data-filter='["tech","Power Bank"]'>
+<a target="_blank" href="https://amzn.to/324B8vv" class="overlay-container" data-overlay-text="Power Bank"><img src="https://images.unsplash.com/photo-1536692192939-f1547f1cde39?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Power Bank" class="overlay-img" /><p>Power Bank</p></a>
+</div>
+
+<div class="filter-node most_box" data-filter='["others","car mount holder"]'>
+<a target="_blank" href="https://amzn.to/2KUFLlX" class="overlay-container" data-overlay-text="car mount holder"><img src="https://images-na.ssl-images-amazon.com/images/I/71C5Rzrql3L._SX679_.jpg" alt="car mount holder" class="overlay-img" /><p>car mount holder</p></a>
+</div>
+
+<div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
+<a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" class="overlay-img" /><p>Title</p></a>
+</div>
+
+<div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
+<a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" class="overlay-img" /><p>Title</p></a>
+</div>
+
+<div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
+<a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" class="overlay-img" /><p>Title</p></a>
+</div>
 
 <div class="filter-node most_box" data-filter='["tech","earbuds Headphones"]'>
   <a target="_blank" href="https://amzn.to/2Z6Wnjb" class="overlay-container" data-overlay-text="earbuds"><img src="https://images.unsplash.com/photo-1565168316300-8685a0e25dcd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="earbuds" class="overlay-img" /><p>earbuds</p></a>
