--- a/app/views/deals/_navbar_most_index.html.erb
+++ b/app/views/deals/_navbar_most_index.html.erb
@@ -7,7 +7,8 @@
       <button class="filter-button btn btn-md white-text rev_index" data-filter="tech">Tech & Electronics</button>
       <button class="filter-button btn btn-md rev_index" data-filter="home">Home & Kitchen</button>
       <button class="filter-button btn btn-md rev_index" data-filter="outdoor">Outdoor & Sports</button>
-      <button class="filter-button btn btn-md rev_index" data-filter="outdoor">Beauty & Fashion</button>
+      <!-- <button class="filter-button btn btn-md rev_index" data-filter="outdoor">Beauty & Fashion</button> -->
+      <button class="filter-button btn btn-md rev_index" data-filter="others">Others</button>
       <!-- <button class="filter-button btn btn-md rev_index last_menu" data-filter="outdoor">etc...</button> -->
 <!--  <button class="filter-button btn btn-md rev_index" data-filter="5k">5,000 +</button>
       <button class="filter-button btn btn-md rev_index" data-filter="1k">1,000 +</button> -->
