--- a/app/views/deals_days/_day_02.html.erb
+++ b/app/views/deals_days/_day_02.html.erb
@@ -8,7 +8,7 @@
     <p><a target="_blank" href="https://amzn.to/31UFXHx"><span>Amazon Deal Of The Day:</span> Chef'sChoice 609A000 Electric Meat Slicer with Stainless Steel Blade Features Slice...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$99.99</span><span class="ori_price">$150.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31UFXHx">Shop Now at Amazon</a></div>
@@ -74,7 +74,7 @@
     <p><a target="_blank" href="https://amzn.to/31Z89cf">Westcott 8" Titanium Bonded Scissors, 2 Scissors</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$6.84</span><span class="ori_price">$25.35</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31Z89cf">Shop Now at Amazon</a></div>
@@ -90,7 +90,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZhjVgB">WiFi Extender 300 Mbps with WPS Internet Signal Booster - Wireless Repeater 2.4GHz Band up to 300 Mbps ...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$28.81</span><span class="ori_price">$69.50</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZhjVgB">Shop Now at Amazon</a></div>
@@ -106,7 +106,7 @@
     <p><a target="_blank" href="https://amzn.to/31VkoXk">Laser Tape Measure 2-in-1, laser measurement 131Ft silent laser range finder USB rechargeable color LCD display,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$31.51</span><span class="ori_price">$66.65</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31VkoXk">Shop Now at Amazon</a></div>
@@ -122,7 +122,7 @@
     <p><a target="_blank" href="https://amzn.to/2HiUh51">Eraindo Small Personal USB Desk Fan 360 Degree Rotation 3 Speeds Mini Size Desktop Table Protable Fan with USB Rechargeable...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$9.90</span><span class="ori_price">$19.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HiUh51">Shop Now at Amazon</a></div>
@@ -138,7 +138,7 @@
     <p><a target="_blank" href="https://amzn.to/2HyaovJ">SIMOLIO Digital Wireless Headphones with Optical for All TVs, Hearing Protection Wireless TV Headphone, Wireless TV Headsets...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$59.49</span><span class="ori_price">$119.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HyaovJ">Shop Now at Amazon</a></div>
@@ -154,7 +154,7 @@
     <p><a target="_blank" href="https://amzn.to/2KOGyoH">Kodak PIXPRO Astro Zoom AZ251-SL 16MP Digital Camera with 25X Optical Zoom and 3" LCD Screen (Silver) (Renewed)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$99.99</span><span class="ori_price">$199.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KOGyoH">Shop Now at Amazon</a></div>
@@ -170,7 +170,7 @@
     <p><a target="_blank" href="https://amzn.to/2HlBHZT">ASUS Transformer Book T100TA 10.1-inch Detachable Windows 8.1 Tablet (Renewed)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$199.99</span><span class="ori_price">$399.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HlBHZT">Shop Now at Amazon</a></div>
@@ -186,7 +186,7 @@
     <p><a target="_blank" href="https://amzn.to/2zbO1HE">Quiseen One-Touch Electric Coffee Grinder. Grinds Coffee Beans, Spices, Nuts and Grains...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$14.95</span><span class="ori_price">$29.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2zbO1HE">Shop Now at Amazon</a></div>
@@ -202,7 +202,7 @@
     <p><a target="_blank" href="https://amzn.to/2KMSQO6">Hamilton Beach Coffee Maker with Glass Carafe, 5-Cup (48136)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$16.99</span><span class="ori_price">$32.50</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KMSQO6">Shop Now at Amazon</a></div>
@@ -218,7 +218,7 @@
     <p><a target="_blank" href="https://amzn.to/2HibbQY">Euro Cuisine YM80 Yogurt Maker</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$27.99</span><span class="ori_price">$40.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HibbQY">Shop Now at Amazon</a></div>
@@ -234,7 +234,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZoNsFi">Steamfast SF-717 Mini Steam Iron with Dual Voltage Travel Bag, Non-Stick Soleplate, Anti-Slip Handle, Rapid Heating,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$29.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZoNsFi">Shop Now at Amazon</a></div>
@@ -250,7 +250,7 @@
     <p><a target="_blank" href="https://amzn.to/2HmDbTQ">SoundAsleep Dream Series Air Mattress with ComfortCoil Technology & Internal High Capacity Pump - Queen Size</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$119.95</span><span class="ori_price">$179.95</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HmDbTQ">Shop Now at Amazon</a></div>
@@ -266,7 +266,7 @@
     <p><a target="_blank" href="https://amzn.to/31SjATh">J5 Tactical V1-PRO Flashlight - The Original 300 Lumen Ultra Bright, LED Mini 3 Mode Flashlight</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$13.95</span><span class="ori_price">$29.95</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31SjATh">Shop Now at Amazon</a></div>
@@ -285,7 +285,7 @@
         <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
       <div class="m_tooltip_common m_tooltip_purple"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KYVwqU">Shop Now at Amazon</a></div>
@@ -301,7 +301,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZoNQUg">Under Armour Undeniable Duffle 3.0 Gym Bag(X-Large)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$45.99</span><span class="ori_price">$64.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZoNQUg">Shop Now at Amazon</a></div>
@@ -317,7 +317,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZoNYTK">BV Bicycle Light Set Super Bright 5 LED Headlight, 3 LED Taillight, Quick-Release</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$7.99</span><span class="ori_price">$20.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZoNYTK">Shop Now at Amazon</a></div>
@@ -333,7 +333,7 @@
     <p><a target="_blank" href="https://amzn.to/2KMALQd">St. Mege 4D Silk Fiber Lash Mascara & Fiber 2-in-1 Set, Best for Thickening and Lengthening, Waterproof and Smudge-Proof and Hypoallergenic ...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$14.99</span><span class="ori_price">$29.90</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KMALQd">Shop Now at Amazon</a></div>
@@ -349,7 +349,7 @@
     <p><a target="_blank" href="https://amzn.to/2HlDtdv">Camcorder Video Camera Ultra HD 1080P Vlogging YouTube Digital Recorder Camera with Powerful Microphone, Lens Hood,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$101.99</span><span class="ori_price">$199.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HlDtdv">Shop Now at Amazon</a></div>
@@ -365,7 +365,7 @@
     <p><a target="_blank" href="https://amzn.to/31WBgxa">TRAVELAX Travel Kit Contains 100% Pure Memory Foam Neck Pillow with Ultra Plush Velour Cover, Sleep Mask,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$16.01</span><span class="ori_price">$31.57</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31WBgxa">Shop Now at Amazon</a></div>
@@ -381,7 +381,7 @@
     <p><a target="_blank" href="https://amzn.to/2L4h4SY">Drizom Citrus Lemon Orange Juicer Manual Hand Squeezer with Built-in Measuring Cup and Grater, 12OZ, Green</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$8.39</span><span class="ori_price">$15.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2L4h4SY">Shop Now at Amazon</a></div>
@@ -397,7 +397,7 @@
     <p><a target="_blank" href="https://amzn.to/2Hjj88I">Lava the Original 14.5-Inch Silver Base Lamp with Purple Wax in Blue Liquid</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$7.50</span><span class="ori_price">$19.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Hjj88I">Shop Now at Amazon</a></div>
@@ -413,7 +413,7 @@
     <p><a target="_blank" href="https://amzn.to/31WC9G0">YI Dome Security Camera 1080p HD Pan/Tilt/Zoom Wireless 2.4G IP Surveillance System with 24/7 Emergency Response,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$39.99</span><span class="ori_price">$59.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31WC9G0">Shop Now at Amazon</a></div>
@@ -429,7 +429,7 @@
     <p><a target="_blank" href="https://amzn.to/31TOri9">Honeywell Home RPLS740B1008 Econoswitch 7-Day Programmable Light Switch Timer, White</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$35.88</span><span class="ori_price">$49.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31TOri9">Shop Now at Amazon</a></div>
@@ -445,7 +445,7 @@
     <p><a target="_blank" href="https://amzn.to/2L0C50X">Wireless Headphones for TV Watching with Optical, ARTISTE ADH300 2.4GHz Digital Wireless TV Headphones, 100ft Distance Rechargeable...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$68.84</span><span class="ori_price">$125.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2L0C50X">Shop Now at Amazon</a></div>
@@ -461,7 +461,7 @@
     <p><a target="_blank" href="https://amzn.to/2Z6Enp2">American Tourister Istack Travel System Softside 2-Piece Setwith Double Air Flow Spinner Wheels, Heather Grey/Black</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$128.32</span><span class="ori_price">$229.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z6Enp2">Shop Now at Amazon</a></div>
