--- a/app/views/deals_days/_day_04.html.erb
+++ b/app/views/deals_days/_day_04.html.erb
@@ -8,7 +8,7 @@
     <p><a target="_blank" href="https://amzn.to/325jPul">FEZIBO Standing Desk Anti Fatigue Mat Wooden Wobble Balance Board Stability Rocker with Ergonomic Design Comfort Floor Mat</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$46.69</span><span class="ori_price">$94.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/325jPul">Shop Now at Amazon</a></div>
@@ -24,7 +24,7 @@
     <p><a target="_blank" href="https://amzn.to/31Srmwq">Mini Kitchen Timer, ABS Alarm Clock with USB Charger,1-75 Minutes,Timer cube for Cooking Studying Working Baking Heavy Sleeper,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$15.29</span><span class="ori_price">$25.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31Srmwq">Shop Now at Amazon</a></div>
@@ -40,7 +40,7 @@
     <p><a target="_blank" href="https://amzn.to/31SrnAu">Holmes Window Fan with with Twin 6-Inch Reversible Airflow Blades, White</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$15.05</span><span class="ori_price">$29.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31SrnAu">Shop Now at Amazon</a></div>
@@ -92,7 +92,7 @@
     <p><a target="_blank" href="https://amzn.to/2Hq6xR0"><span>Amazon Deal Of The Day:</span> Native Deodorant - Natural Deodorant - Vegan, Gluten Free, Cruelty Free - Free of Aluminum,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$25.20</span><span class="ori_price">$42.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Hq6xR0">Shop Now at Amazon</a></div>
@@ -108,7 +108,7 @@
     <p><a target="_blank" href="https://amzn.to/2Hk8cHS">Frigidaire WF3CB Puresource Replacement Filter, 1-Pack,</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$29.99</span><span class="ori_price">$66.23</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Hk8cHS">Shop Now at Amazon</a></div>
@@ -124,7 +124,7 @@
     <p><a target="_blank" href="https://amzn.to/323wCNY">Chef Buddy 82-SW73 Panini Press Indoor Grill and Gourmet Sandwich Maker, Electric with Nonstick Plates, 12.75" x 11" x 4.75", Silver</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$15.46</span><span class="ori_price">$52.69</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/323wCNY">Shop Now at Amazon</a></div>
@@ -140,7 +140,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZtmxIs">Aroma Simply Stainless Rice Cooker, White [Cooks 3 cups of uncooked rice]</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$19.39</span><span class="ori_price">$39.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZtmxIs">Shop Now at Amazon</a></div>
@@ -160,7 +160,7 @@
     <p><a target="_blank" href="https://amzn.to/3242G3V">Presto 03500 Belgian Waffle Bowl Maker</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$19.95</span><span class="ori_price">$45.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/3242G3V">Shop Now at Amazon</a></div>
@@ -179,7 +179,7 @@
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       </address>
       <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/321j1GQ">Shop Now at Amazon</a></div>
@@ -195,7 +195,7 @@
     <p><a target="_blank" href="https://amzn.to/31Z6ZO3">Foruisin Portable Personal Blender, Household Juicer fruit shake Mixer -Six Blades, 380ml Baby cooking machine...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$16.99</span><span class="ori_price">$29.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31Z6ZO3">Shop Now at Amazon</a></div>
@@ -215,7 +215,7 @@
     <p><a target="_blank" href="https://amzn.to/2HnZvfz">Personal Smoothie Blender, DOUHE Cordless Portable Blender Rechargeable USB Juicer Mini Blender Small Blender -Shakes,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$29.99</span><span class="ori_price">$49.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HnZvfz">Shop Now at Amazon</a></div>
@@ -231,7 +231,7 @@
     <p><a target="_blank" href="https://amzn.to/2HpzCw1">Microsoft Surface Book 2 13.5" (Intel Core i7, 8GB RAM, 256 GB)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$1,550.00</span><span class="ori_price">$1,999.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HpzCw1">Shop Now at Amazon</a></div>
@@ -247,7 +247,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZpuoGS">Hisense 55H8F 55-inch 4K Ultra HD Android Smart LED TV HDR10 (2019)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$399.99</span><span class="ori_price">$499.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZpuoGS">Shop Now at Amazon</a></div>
@@ -263,7 +263,7 @@
     <p><a target="_blank" href="https://amzn.to/2KQLaL0">Logitech G300s Optical Ambidextrous Gaming Mouse – 9 Programmable Buttons, Onboard Memory</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$19.92</span><span class="ori_price">$39.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KQLaL0">Shop Now at Amazon</a></div>
@@ -279,7 +279,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZnCOi2">PNY Elite-X Fit 64GB 200MB/sec USB 3.0 Flash Drive (P-FDI64GEXFIT-GE)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$11.99</span><span class="ori_price">$24.82</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZnCOi2">Shop Now at Amazon</a></div>
@@ -295,7 +295,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZoS16d">Seagate BarraCuda 500GB Internal Hard Drive HDD – 3.5 Inch SATA 6 Gb/s 7200 RPM 32MB Cache for Computer Desktop PC (ST500DM009)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$28.46</span><span class="ori_price">$42.92</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZoS16d">Shop Now at Amazon</a></div>
@@ -311,7 +311,7 @@
     <p><a target="_blank" href="https://amzn.to/2KTvs1q">First Alert Carbon Monoxide Detector Alarm|No Outlet Required with Digital Display and Peak Memory, Battery Operated, CO410</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$28.20</span><span class="ori_price">$49.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KTvs1q">Shop Now at Amazon</a></div>
@@ -327,7 +327,7 @@
     <p><a target="_blank" href="https://amzn.to/2HlPyPQ">TOPGREENER Smart Light Switch, UL Listed, NEUTRAL Wire Required, Single Pole or 3-Way, No Hub Required,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$44.79</span><span class="ori_price">$79.98</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HlPyPQ">Shop Now at Amazon</a></div>
@@ -343,7 +343,7 @@
     <p><a target="_blank" href="https://amzn.to/2Zp73VH">HP OfficeJet 3830 All-in-One Wireless Printer, HP Instant Ink & Amazon Dash Replenishment ready (K7V40A)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$49.89</span><span class="ori_price">$99.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Zp73VH">Shop Now at Amazon</a></div>
@@ -359,7 +359,7 @@
     <p><a target="_blank" href="https://amzn.to/2NsXKBD">8-In-1 Type C Hub USB C Hub Adapter Dock with Ethernet Port, 4K USB C to HDMI,3 USB 3.0 Ports,SD TF Card Reader ...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$32.00</span><span class="ori_price">$54.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NsXKBD">Shop Now at Amazon</a></div>
@@ -375,7 +375,7 @@
     <p><a target="_blank" href="https://amzn.to/2KVfbcJ">Beats EP On-Ear Headphones - Black</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$64.95</span><span class="ori_price">$129.95</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KVfbcJ">Shop Now at Amazon</a></div>
@@ -391,7 +391,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZlRFJL">Samsung Qi Certified Fast Charge Wireless Charger Pad - US Version - Black (2- Pack) - EP-BD010MIXLUS</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$33.00</span><span class="ori_price">$99.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZlRFJL">Shop Now at Amazon</a></div>
@@ -410,7 +410,7 @@
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       </address>
       <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Nukb9Q">Shop Now at Amazon</a></div>
@@ -429,7 +429,7 @@
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       </address>
       <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HnTKhU">Shop Now at Amazon</a></div>
@@ -445,7 +445,7 @@
     <p><a target="_blank" href="https://amzn.to/2HqoTl8">Asobu Coldbrew Portable Cold Brew Coffee Maker With a Vacuum Insulated 34oz Stainless Steel 18/8 Carafe Bpa Free</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$24.90</span><span class="ori_price">$33.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HqoTl8">Shop Now at Amazon</a></div>
@@ -461,7 +461,7 @@
     <p><a target="_blank" href="https://amzn.to/2KRlDRE">Cuisinart CWO-50 086279096395 Cordless Wine Opener with Vacuum Sealer, One Size, Black</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$30.99</span><span class="ori_price">$75.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KRlDRE">Shop Now at Amazon</a></div>
@@ -477,7 +477,7 @@
     <p><a target="_blank" href="https://amzn.to/2Zs1Oo1">COMFEE' Kettle-MK-17G01B-E5 BPA Free, 1.7L Black Fast Glass Boiler Hot Water Kettle with with LED Indicator Light,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$26.00</span><span class="ori_price">$49.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Zs1Oo1">Shop Now at Amazon</a></div>
@@ -493,7 +493,7 @@
     <p><a target="_blank" href="https://amzn.to/31TUyTE">Pre-Seasoned Cast Iron Skillet 2-Piece Set (10-Inch and 12-Inch) Oven Safe Cookware - 2 Heat-Resistant Holders...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$37.99</span><span class="ori_price">$79.95</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31TUyTE">Shop Now at Amazon</a></div>
@@ -509,7 +509,7 @@
     <p><a target="_blank" href="https://amzn.to/322hErn">HP 5MS96A Sprocket 2-in-1 Portable Photo Printer & Instant Camera Bundle with 8GB Micro SD Card and Zink Photo Paper,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$54.99</span><span class="ori_price">$89.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/322hErn">Shop Now at Amazon</a></div>
@@ -529,7 +529,7 @@
     <p><a target="_blank" href="https://amzn.to/2KTEzQ0">K&H Pet Products EZ Mount Window Pod Kitty Sill 27" x 20" x 6"</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$27.18</span><span class="ori_price">$35.96</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KTEzQ0">Shop Now at Amazon</a></div>
@@ -545,7 +545,7 @@
     <p><a target="_blank" href="https://amzn.to/2zlfS8g">Go Pet Club F703 33" Kitten Tree</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$27.33</span><span class="ori_price">$49.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2zlfS8g">Shop Now at Amazon</a></div>
