--- a/app/views/deals_days/_day_06.html.erb
+++ b/app/views/deals_days/_day_06.html.erb
@@ -8,7 +8,7 @@
     <p><a target="_blank" href="https://amzn.to/2KWpuMp">Apple iPad Pro (12.9-inch, Wi-Fi, 1TB) - Space Gray (Latest Model)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$1,349.99</span><span class="ori_price">$1,749.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KWpuMp">Shop Now at Amazon</a></div>
@@ -25,7 +25,7 @@
     <p><a target="_blank" href="https://amzn.to/2HcQaHF">Microsoft Surface Laptop (1st Gen) DAJ-00041 Laptop (Windows 10 S, Intel Core i7, 13.5" LCD Screen, Storage: 256 GB, RAM: 8 GB) Burgundy</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$772.99</span><span class="ori_price">$1,599.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HcQaHF">Shop Now at Amazon</a></div>
@@ -41,7 +41,7 @@
     <p><a target="_blank" href="https://amzn.to/31MPNev"><span>Amazon Deal Of The Day:</span>Dash DFAF455GBRD01 Deluxe Electric Air Fryer + Oven Cooker with with Temperature Control,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$69.99</span><span class="ori_price">$99.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31MPNev">Shop Now at Amazon</a></div>
@@ -57,7 +57,7 @@
     <p><a target="_blank" href="https://amzn.to/31QutVM"><span>Amazon Deal Of The Day:</span> Panasonic Bluetooth Cordless Phone KX-TG7875S Link2Cell with Enhanced Noise...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$85.00</span><span class="ori_price">$169.95</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31QutVM">Shop Now at Amazon</a></div>
@@ -123,7 +123,7 @@
     <p><a target="_blank" href="https://amzn.to/2HbUW86">MidWest Exercise Pen / Pet Playpens | 8-Panels Each w/ 5 Height Options Ideal for Any Dog Breed</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$36.99</span><span class="ori_price">$79.28</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HbUW86">Shop Now at Amazon</a></div>
@@ -139,7 +139,7 @@
     <p><a target="_blank" href="https://amzn.to/2Zgvl3X">PetSafe Solvit PupSTEP Plus Pet Stairs, Foldable Steps for Dogs and Cats, for Small, Medium, Large, X-Large Pets</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$39.95</span><span class="ori_price">$59.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Zgvl3X">Shop Now at Amazon</a></div>
@@ -158,7 +158,7 @@
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KZRjU6">Shop Now at Amazon</a></div>
@@ -174,7 +174,7 @@
     <p><a target="_blank" href="https://amzn.to/2KEjLMa">Bonve Pet Dog Grooming Clippers, Cordless Low Noise Dog Cat Hair Trimmer with Dog Comb Scissor & 6 Limited Guides Best ...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$16.99</span><span class="ori_price">$59.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KEjLMa">Shop Now at Amazon</a></div>
@@ -190,7 +190,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZfdavA">Key Pets Finder Tracker, ldcx Wireless RF Item Locator Anti Lost Keys Finder Tag Alarm Reminder,1 RF Transmitter 4 Receivers,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$15.29</span><span class="ori_price">$139.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZfdavA">Shop Now at Amazon</a></div>
@@ -206,7 +206,7 @@
     <p><a target="_blank" href="https://amzn.to/31PPe3L">Rotary Tool TECCPO with Universal Keyless Chuck, 170W/1.5AMP, 8,000-35,000 RMP, with Variable Speed,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$28.04</span><span class="ori_price">$159.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="product_link">Shop Now at Amazon</a></div>
@@ -222,7 +222,7 @@
     <p><a target="_blank" href="https://amzn.to/2KF252U">Ergotech Freedom Stand, Height Adjustable Desk, Dual Monitors, 30" Wide - Black - FDM-STAND-2</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$201.99</span><span class="ori_price">$364.80</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KF252U">Shop Now at Amazon</a></div>
@@ -241,7 +241,7 @@
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       </address>
       <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NeNPQf">Shop Now at Amazon</a></div>
@@ -257,7 +257,7 @@
     <p><a target="_blank" href="https://amzn.to/31RIz9l">2-Slice Toaster, Homeleader Stainless Steel Toaster with Removable Crumb Tray, 700W</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$21.24</span><span class="ori_price">$99.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31RIz9l">Shop Now at Amazon</a></div>
@@ -273,7 +273,7 @@
     <p><a target="_blank" href="https://amzn.to/31KpW72">LOCK & LOCK HPL982 Easy Essentials Specialty Cup, 1-Liter Measuring Bowl 1L / 34oz, 1 Liter, Natural</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$3.77</span><span class="ori_price">$6.72</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31KpW72">Shop Now at Amazon</a></div>
@@ -289,7 +289,7 @@
     <p><a target="_blank" href="https://amzn.to/2YXPXCZ">Soft Digits 50 in 1 Action Camera Accessories Kit for GoPro Hero 2018 GoPro Hero7 6 5 4 3 with Carrying Case/Chest...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$89.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YXPXCZ">Shop Now at Amazon</a></div>
@@ -305,7 +305,7 @@
     <p><a target="_blank" href="https://amzn.to/2NhyCxM">Joseph Joseph 95031 Nest 100 Utensils Compact Stacking Kitchen Tool Set with Magnetic Storage Stand Nylon, 5-piece, Gray</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$39.99</span><span class="ori_price">$49.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NhyCxM">Shop Now at Amazon</a></div>
@@ -321,7 +321,7 @@
     <p><a target="_blank" href="https://amzn.to/2KJktYG">GORILLA GRIP Slip-Resistant Leak Proof Mattress Pad Protector, 52x34, Absorbs 8 Cups, Oeko Tex Certified,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$18.79</span><span class="ori_price">$34.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KJktYG">Shop Now at Amazon</a></div>
@@ -340,7 +340,7 @@
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       </address>
       <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2He3nQf">Shop Now at Amazon</a></div>
@@ -356,7 +356,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZegqaG">Elevation Lab The Anchor, Under - Desk Headphone Stand Mount</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$11.95</span><span class="ori_price">$19.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZegqaG">Shop Now at Amazon</a></div>
@@ -372,7 +372,7 @@
     <p><a target="_blank" href="https://amzn.to/31XBaFB">Stainless Steel Knife Set with Block - 13 Kitchen Knives Set Chef Knife Set with Knife Sharpener, 6 Steak Knives,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$39.99</span><span class="ori_price">$49.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31XBaFB">Shop Now at Amazon</a></div>
@@ -388,7 +388,7 @@
     <p><a target="_blank" href="https://amzn.to/31HigCu">HP 7 G2 1315 7-Inch 8 GB Tablet (Silver) (Renewed)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$74.99</span><span class="ori_price">$299.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31HigCu">Shop Now at Amazon</a></div>
@@ -404,7 +404,7 @@
     <p><a target="_blank" href="https://amzn.to/33BmHAy">ION360 U - 4K Ultra HD 360-Degree Camera and Smartphone Charging Battery Case for Apple iPhone 7 Plus Charcoal Grey</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$77.95</span><span class="ori_price">$287.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/33BmHAy">Shop Now at Amazon</a></div>
@@ -420,7 +420,7 @@
     <p><a target="_blank" href="https://amzn.to/2HgDvU6">MP3 Headphones Built in 8GB TF Card Memory Storage, Ralyin Bluetooth Earbuds with Microphone Wireless Headphones for ...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$25.49</span><span class="ori_price">$79.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HgDvU6">Shop Now at Amazon</a></div>
@@ -436,7 +436,7 @@
     <p><a target="_blank" href="https://amzn.to/33MsCDc">Wireless Earbuds,Kissral Bluetooth 5.0 Earbuds with 3000mAh Charging Case LED Battery Display 90H Playtime in-Ear ...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$42.49</span><span class="ori_price">$129.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/33MsCDc">Shop Now at Amazon</a></div>
@@ -452,7 +452,7 @@
     <p><a target="_blank" href="https://amzn.to/2Heiyc9">Safavieh Lighting Collection Jacoby Cream 28.9-inch Table Lamp (Set of 2)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$144.70</span><span class="ori_price">$444.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Heiyc9">Shop Now at Amazon</a></div>
@@ -468,7 +468,7 @@
     <p><a target="_blank" href="https://amzn.to/2Z85ATC">KOOLORBS Makeup Mirror with Lights, 21 LED Vanity Mirror with 1x 2x 3x Magnification, Touch Screen Switch, 180 Degree Rotation Rotation, Dual Power Supply, Portable Trifold Mirror, Rose Gold  </a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$16.99</span><span class="ori_price">$49.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z85ATC">Shop Now at Amazon</a></div>
@@ -484,7 +484,7 @@
     <p><a target="_blank" href="https://amzn.to/2NgwQNw">Manual Coffee Grinder, Hand Ceramic Burr Mill for Precision Brewing, Powder to Coarse Grounds, Brushed Stainless ...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$10.19</span><span class="ori_price">$29.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NgwQNw">Shop Now at Amazon</a></div>
