--- a/app/views/deals_days/_day_07.html.erb
+++ b/app/views/deals_days/_day_07.html.erb
@@ -43,7 +43,7 @@
     <p><a target="_blank" href="https://amzn.to/2NiSOzi"><span>Amazon Deal Of The Day:</span> Edifier R1280T Powered Bookshelf Speakers - 2.0 Active Near Field Monitors ...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$69.99</span><span class="ori_price">$99.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NiSOzi">Shop Now at Amazon</a></div>
@@ -59,7 +59,7 @@
     <p><a target="_blank" href="https://amzn.to/31Ijn50">MEE audio X7 Stereo Bluetooth Wireless Sports in-Ear Headphones Red (EP-X7-RDBK-MEE)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$29.99</span><span class="ori_price">$59.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31Ijn50">Shop Now at Amazon</a></div>
@@ -75,7 +75,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZhzuEW">Cyber Acoustics CA-2014 multimedia desktop computer speakers</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$10.49</span><span class="ori_price">$21.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZhzuEW">Shop Now at Amazon</a></div>
@@ -91,7 +91,7 @@
     <p><a target="_blank" href="https://amzn.to/31ObLxL">Transcend 128GB JetFlash 790 USB 3.0 Flash Drive (TS128GJF790K)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$23.51</span><span class="ori_price">$54.86</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31ObLxL">Shop Now at Amazon</a></div>
@@ -107,7 +107,7 @@
     <p><a target="_blank" href="https://amzn.to/2Z7HdKH">OtterBox ALPHA GLASS SERIES Screen Protector for iPhone 6/6s/7/8 (NOT Plus) - Retail Packaging - CLEAR</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$9.95</span><span class="ori_price">$39.95</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z7HdKH">Shop Now at Amazon</a></div>
@@ -123,7 +123,7 @@
     <p><a target="_blank" href="https://amzn.to/33MAMLN">NETGEAR 8-Port Gigabit Ethernet Smart Managed Plus Switch (GSS108E) - with Virtually AnywhereTM CLICK Mount System,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$29.99</span><span class="ori_price">$59.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/33MAMLN">Shop Now at Amazon</a></div>
@@ -139,7 +139,7 @@
     <p><a target="_blank" href="https://amzn.to/2HtIzoj">SanDisk High Endurance Video Monitoring Card with Adapter 64GB (SDSDQQ-064G-G46A)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$16.40</span><span class="ori_price">$39.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HtIzoj">Shop Now at Amazon</a></div>
@@ -155,7 +155,7 @@
     <p><a target="_blank" href="https://amzn.to/2zfcGLj">Apple USB-C Charge Cable (2m) ( by Apple )</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$13.99</span><span class="ori_price">$35.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2zfcGLj">Shop Now at Amazon</a></div>
@@ -171,7 +171,7 @@
     <p><a target="_blank" href="https://amzn.to/2HgdP9T">Echo Plus (2nd Gen) with Sengled Smart LED Bulb - Alexa smart home starter kit - Charcoal</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$109.99</span><span class="ori_price">$159.98</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HgdP9T">Shop Now at Amazon</a></div>
@@ -187,7 +187,7 @@
     <p><a target="_blank" href="https://amzn.to/31RlMuk">WiFi Extender 300 Mbps with WPS Internet Signal Booster - Wireless Repeater 2.4GHz Band up to 300 Mbps...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$28.00</span><span class="ori_price">$69.95</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31RlMuk">Shop Now at Amazon</a></div>
@@ -203,7 +203,7 @@
     <p><a target="_blank" href="https://amzn.to/31Ny8n4">Universal Travel Power Adapter with 4 USB, Type-C Quick Charge. All in One AC Socket for 880W Hair Dryer,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$59.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31Ny8n4">Shop Now at Amazon</a></div>
@@ -219,7 +219,7 @@
     <p><a target="_blank" href="https://amzn.to/2HftnLf">TekHome 2019 1.6W Solar Birdbath Fountain, Solar Powered Bird Bath Fountain, Mini Water Fountains Outdoor for Garden Pond,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$15.29</span><span class="ori_price">$39.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HftnLf">Shop Now at Amazon</a></div>
@@ -235,7 +235,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZhH9XS">Projector(2019) XINDA 2000 Lumens Video Projector with 170" Display 50,000 Hours LED Full HD Video Projector,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$76.49</span><span class="ori_price">$199.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZhH9XS">Shop Now at Amazon</a></div>
@@ -254,7 +254,7 @@
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       </address>
       <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z8uzub">Shop Now at Amazon</a></div>
@@ -270,7 +270,7 @@
     <p><a target="_blank" href="https://amzn.to/2KJO6cn">Samsung 970 EVO 500GB - NVMe PCIe M.2 2280 SSD (MZ-V7E500BW)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$89.91</span><span class="ori_price">$149.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KJO6cn">Shop Now at Amazon</a></div>
@@ -286,7 +286,7 @@
     <p><a target="_blank" href="https://amzn.to/2Hco2nS">Smart Caregiver Two Call Buttons & Wireless Caregiver Pager</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$20.95</span><span class="ori_price">$49.95</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Hco2nS">Shop Now at Amazon</a></div>
@@ -302,7 +302,7 @@
     <p><a target="_blank" href="https://amzn.to/2Z7KycH">Marvel Black Panther Titan Hero Series 12-inch Erik Killmonger</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$11.45</span><span class="ori_price">$24.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z7KycH">Shop Now at Amazon</a></div>
@@ -318,7 +318,7 @@
     <p><a target="_blank" href="https://amzn.to/2Z67rgm">Pleson Wireless Car Charger Mount, Auto-Clamp 10W/7.5W Qi Fast Charging Windshield Dashboard & Vent Car Phone Holder...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$22.99</span><span class="ori_price">$49.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z67rgm">Shop Now at Amazon</a></div>
@@ -334,7 +334,7 @@
     <p><a target="_blank" href="https://amzn.to/2HdQhCC">Intex Inflatable Corner Sofa, 101" X 80" X 30"</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$49.99</span><span class="ori_price">$139.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HdQhCC">Shop Now at Amazon</a></div>
@@ -350,7 +350,7 @@
     <p><a target="_blank" href="https://amzn.to/2Z54o8q">Nail Clippers Set - Professional Stainless Steel Fingernail & Toenail Clipper with Leather Case...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$4.99</span><span class="ori_price">$11.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z54o8q">Shop Now at Amazon</a></div>
@@ -366,7 +366,7 @@
     <p><a target="_blank" href="https://amzn.to/2Z5egyI">Swingline Laminator, Thermal, Inspire Plus Lamination Machine, 9 inches Max Width, Quick Warm-Up, Includes Laminating...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$23.16</span><span class="ori_price">$32.69</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z5egyI">Shop Now at Amazon</a></div>
@@ -382,7 +382,7 @@
     <p><a target="_blank" href="https://amzn.to/2Z4PSh0">Apple iPad 2-3 Premium Clear LCD Screen Protector Cover Guard Shield Films</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$3.84</span><span class="ori_price">$9.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z4PSh0">Shop Now at Amazon</a></div>
@@ -398,7 +398,7 @@
     <p><a target="_blank" href="https://amzn.to/2Zctz3T">VELCRO Brand Industrial Strength Fasteners | Stick-On Adhesive | Professional Grade Heavy Duty Strength Holds...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$17.88</span><span class="ori_price">$40.49</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Zctz3T">Shop Now at Amazon</a></div>
@@ -414,7 +414,7 @@
     <p><a target="_blank" href="https://amzn.to/2NlH3YL">Oakley Holbrook Iridium Sport Sunglasses</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$74.95</span><span class="ori_price">$123.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NlH3YL">Shop Now at Amazon</a></div>
@@ -430,7 +430,7 @@
     <p><a target="_blank" href="https://amzn.to/2Z2VM28">Champion LIFE Men's Reverse Weave Pullover Hoodie</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$29.63</span><span class="ori_price">$58.37</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z2VM28">Shop Now at Amazon</a></div>
@@ -446,7 +446,7 @@
     <p><a target="_blank" href="https://amzn.to/31S8Kwi">Champion LIFE Men's Reverse Weave Pullover Hoodie</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$28.46</span><span class="ori_price">$54.95</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31S8Kwi">Shop Now at Amazon</a></div>
@@ -462,7 +462,7 @@
     <p><a target="_blank" href="https://amzn.to/2Z0mR5Y">HARISON Recumbent Exercise Bike Stationary with 14 Level Magnetic Resistance, Tablet Holder, RPM, Wide Seat,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$364.65</span><span class="ori_price">$899.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z0mR5Y">Shop Now at Amazon</a></div>
@@ -478,7 +478,7 @@
     <p><a target="_blank" href="https://amzn.to/2Zb1pGJ">Alphasonik CORE Home Wireless Bluetooth Portable Speaker with HD Sound and Bass, Built-in Mic, Micro USB,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$39.95</span><span class="ori_price">$72.47</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Zb1pGJ">Shop Now at Amazon</a></div>
@@ -494,7 +494,7 @@
     <p><a target="_blank" href="https://amzn.to/2KL3G7z">Nespresso VertuoPlus Deluxe Coffee and Espresso Machine Bundle with Aeroccino Milk Frother by Breville, Black</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$119.95</span><span class="ori_price">$249.95</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KL3G7z">Shop Now at Amazon</a></div>
@@ -510,7 +510,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZeL9Ez">360 Dome PTZ Camera, 1080p HD Pan/Tilt/Zoom Wireless Indoor Smart Home Camera IP Security Surveillance System with Night Vision,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$48.44</span><span class="ori_price">$99.90</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZeL9Ez">Shop Now at Amazon</a></div>
