--- a/app/views/deals/_navbar_most_index2.html.erb
+++ b/app/views/deals/_navbar_most_index2.html.erb
@@ -10,7 +10,8 @@
         <li><button class="filter-button btn btn-md white-text rev_index" data-filter="tech">Tech & Electronics</button></li>
         <li><button class="filter-button btn btn-md rev_index" data-filter="home">Home & Kitchen</button></li>
         <li><button class="filter-button btn btn-md rev_index" data-filter="outdoor">Outdoor & Sports</button></li>
-        <li><button class="filter-button btn btn-md rev_index" data-filter="outdoor">Beauty & Fashion</button></li>
+        <!-- <li><button class="filter-button btn btn-md rev_index" data-filter="outdoor">Beauty & Fashion</button></li> -->
+        <li><button class="filter-button btn btn-md rev_index" data-filter="others">Others</button></li>
        </div>
       </ul>
     </nav>
