--- a/app/views/deals_days/_day_01.html.erb
+++ b/app/views/deals_days/_day_01.html.erb
@@ -8,7 +8,7 @@
     <p><a target="_blank" href="https://amzn.to/2Z4WETL">Echo Dot (3rd Gen) - Smart speaker with Alexa - Charcoal</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$29.99</span><span class="ori_price">$49.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z4WETL">Shop Now at Amazon</a></div>
@@ -24,7 +24,7 @@
     <p><a target="_blank" href="https://amzn.to/2Z3SFqy">Fire TV Stick 4K with Alexa Voice Remote, streaming media player</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$39.99</span><span class="ori_price">$49.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z3SFqy">Shop Now at Amazon</a></div>
@@ -40,7 +40,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZfDZzL">Unbroken: A World War II Story of Survival, Resilience, and Redemption Hardcover – November 16, 2010</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$13.95</span><span class="ori_price">$28.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZfDZzL">Shop Now at Amazon</a></div>
@@ -56,7 +56,7 @@
     <p><a target="_blank" href="https://amzn.to/2KL5Cg1">Toshiba 49 inches 1080p Smart LED TV 49LF421U19 (2018)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$249.99</span><span class="ori_price">$330.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KL5Cg1">Shop Now at Amazon</a></div>
@@ -72,7 +72,7 @@
     <p><a target="_blank" href="https://amzn.to/31USb36">iClever USB Wall Charger, BoostCube 24W Dual Port Charger with SmartID Technology and Foldable Plug, ...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$10.98</span><span class="ori_price">$24.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31USb36">Shop Now at Amazon</a></div>
@@ -88,7 +88,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZlcAfL"><span>Amazon Deal Of The Day:</span> Vitamix Venturist V1200, Professional-Grade, 64 oz. Container, Black (Renewed)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$285.95</span><span class="ori_price">$449.95</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZlcAfL">Shop Now at Amazon</a></div>
@@ -129,7 +129,7 @@
     <p><a target="_blank" href="https://amzn.to/2zbk0Yx">Apple iPad (Wi-Fi, 32GB) - Space Gray (Latest Model)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$249.00</span><span class="ori_price">$329.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2zbk0Yx">Shop Now at Amazon</a></div>
@@ -145,7 +145,7 @@
     <p><a target="_blank" href="https://amzn.to/2Hi9DX8">Misfit Shine - Activity and Sleep Monitor</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$49.99</span><span class="ori_price">$69.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Hi9DX8">Shop Now at Amazon</a></div>
@@ -161,7 +161,7 @@
     <p><a target="_blank" href="https://amzn.to/2HeofqE">Plantronics Explorer 50 Bluetooth Headset - Retail Packaging - Black - 202340-21</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$29.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HeofqE">Shop Now at Amazon</a></div>
@@ -177,7 +177,7 @@
     <p><a target="_blank" href="https://amzn.to/33KaycB">ProCase iPad 9.7 Case 2018 iPad 6th Generation Case/ 2017 iPad 5th Generation Case - Ultra Slim Lightweight Stand Case ...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$12.99</span><span class="ori_price">$29.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/33KaycB">Shop Now at Amazon</a></div>
@@ -193,7 +193,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZdkLuR">Logitech G602 Lag-Free Wireless Gaming Mouse – 11 Programmable Buttons, Up to 2500 DPI</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$35.70</span><span class="ori_price">$79.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZdkLuR">Shop Now at Amazon</a></div>
@@ -209,7 +209,7 @@
     <p><a target="_blank" href="https://amzn.to/2HcpTZZ">Holy Stone HS170 Predator Mini RC Helicopter Drone 2.4Ghz 6-Axis Gyro 4 Channels Quadcopter Good Choice for Drone Training</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$29.99</span><span class="ori_price">$50.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HcpTZZ">Shop Now at Amazon</a></div>
@@ -225,7 +225,7 @@
     <p><a target="_blank" href="https://amzn.to/2Nid1W5">Skullcandy Ink'd 2.0 Wired Earbuds with in-Line Microphone and Remote, Tangle-Reducing Flat Cable,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$12.50</span><span class="ori_price">$20.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Nid1W5">Shop Now at Amazon</a></div>
@@ -241,7 +241,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZiAJUe">JSAUX USB Type C Adapter, 4-Pack Aluminum USB C to Micro USB Convert Connector with Keychain Charger Compatible Samsung...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$7.99</span><span class="ori_price">$19.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZiAJUe">Shop Now at Amazon</a></div>
@@ -257,7 +257,7 @@
     <p><a target="_blank" href="https://amzn.to/2NnvY9U">Canary View Indoor 1080p HD Security Camera with Wide-angle Lens, Motion/Person Alerts, Works with Alexa,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$49.00</span><span class="ori_price">$99.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NnvY9U">Shop Now at Amazon</a></div>
@@ -276,7 +276,7 @@
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KMbcPB">Shop Now at Amazon</a></div>
@@ -292,7 +292,7 @@
     <p><a target="_blank" href="https://amzn.to/2Hhs6Dq">Besiter Expandable Garden Hose - 50ft Lightweight Flexible Water Hose with 3/4" Heavy Duty Brass Connectors...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$15.99</span><span class="ori_price">$31.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Hhs6Dq">Shop Now at Amazon</a></div>
@@ -308,7 +308,7 @@
     <p><a target="_blank" href="https://amzn.to/2KJVAMc">PICTEK White Noise Machine, Natural Fan High Fidelity Sound Machine for Baby Sleeping, Noise-Masking Sound Therapy with Sleep Timer...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$31.99</span><span class="ori_price">$79.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KJVAMc">Shop Now at Amazon</a></div>
@@ -324,7 +324,7 @@
     <p><a target="_blank" href="https://amzn.to/2Z5H0HZ">LED Camping Lantern, OutingPro COB Light Ultra Bright Battery Operated Brightness Adjustable Lamp with...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$29.74</span><span class="ori_price">$70.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z5H0HZ">Shop Now at Amazon</a></div>
@@ -340,7 +340,7 @@
     <p><a target="_blank" href="https://amzn.to/2HhIWCi">ASUS D550MAV-DB01(S) 15.6" Intel Dual-Core 2.16GHz Laptop, 500 GB & 4GB RAM (Renewed)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$174.99</span><span class="ori_price">$399.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HhIWCi">Shop Now at Amazon</a></div>
@@ -356,7 +356,7 @@
     <p><a target="_blank" href="https://amzn.to/2KLqofL">Wheeler Engineering Gunsmithing Screwdriver Set with Durable Construction and Storage Case for Gunsmithing and Maintenance</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$19.24</span><span class="ori_price">$39.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KLqofL">Shop Now at Amazon</a></div>
@@ -372,7 +372,7 @@
     <p><a target="_blank" href="https://amzn.to/2KKbp5J">Acer 32in Display Monitor, 4K UHD, 3840 x 2160, 4 ms, IPS, XB321HK (Renewed)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$629.99</span><span class="ori_price">$1,299.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KKbp5J">Shop Now at Amazon</a></div>
@@ -391,7 +391,7 @@
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       </address>
       <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NlGSwD">Shop Now at Amazon</a></div>
@@ -407,7 +407,7 @@
     <p><a target="_blank" href="https://amzn.to/33PUGVV">Key Finder Pet Tracker (Gen II 4 Pack), Item Finder, Phone Finder, Bluetooth Dog Tracker Cat Tracker Smart Tag</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$33.99</span><span class="ori_price">$69.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/33PUGVV">Shop Now at Amazon</a></div>
@@ -426,7 +426,7 @@
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Hg18vQ">Shop Now at Amazon</a></div>
