--- a/app/views/deals_days/_day_03.html.erb
+++ b/app/views/deals_days/_day_03.html.erb
@@ -8,7 +8,7 @@
     <p><a target="_blank" href="https://amzn.to/3233mqx"><span>Amazon Deal Of The Day:</span> Dyson Ball Multi Floor 2 Upright Vacuum, Yellow (Renewed)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$174.99</span><span class="ori_price">$249.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/3233mqx">Shop Now at Amazon</a></div>
@@ -99,7 +99,7 @@
     <p><a target="_blank" href="https://amzn.to/2Nxhu7v">True Wireless Earbuds, BEBEN 5H Continuous 25H Cyclic Playtime IP68 Waterproof 5.0 Wireless Bluetooth Earbuds with Wireless Charging Case,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$45.99</span><span class="ori_price">$79.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Nxhu7v">Shop Now at Amazon</a></div>
@@ -118,7 +118,7 @@
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       </address>
       <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HjLPm4">Shop Now at Amazon</a></div>
@@ -134,7 +134,7 @@
     <p><a target="_blank" href="https://amzn.to/2Zpd5K6">Amazon Cloud Cam Security Camera, Works with Alexa</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$89.99</span><span class="ori_price">$119.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Zpd5K6">Shop Now at Amazon</a></div>
@@ -150,7 +150,7 @@
     <p><a target="_blank" href="https://amzn.to/2KO5xIA">Thermos Stainless King 16 Ounce Travel Tumbler, Matte Black</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$18.00</span><span class="ori_price">$27.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KO5xIA">Shop Now at Amazon</a></div>
@@ -166,7 +166,7 @@
     <p><a target="_blank" href="https://amzn.to/320oRYK">adidas Diablo Duffel Bag</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$16.99</span><span class="ori_price">$25.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/320oRYK">Shop Now at Amazon</a></div>
@@ -185,7 +185,7 @@
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KRqQc8">Shop Now at Amazon</a></div>
@@ -201,7 +201,7 @@
     <p><a target="_blank" href="https://amzn.to/2Zmy5Ne">Power Bank iChance 16000mah Portable Charger with Fast Charge and Safety Charge System Battery Pack for Smart Phone...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$14.00</span><span class="ori_price">$29.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Zmy5Ne">Shop Now at Amazon</a></div>
@@ -217,7 +217,7 @@
     <p><a target="_blank" href="https://amzn.to/2zgeGD4">Motion Sensor Light - Super Bright LED Lights PIR Outdoor Security Light with Two Working Mode 6500K IP66 Waterproof...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$24.99</span><span class="ori_price">$45.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2zgeGD4">Shop Now at Amazon</a></div>
@@ -233,7 +233,7 @@
     <p><a target="_blank" href="https://amzn.to/2KOAPz0">Echo Input – Bring Alexa to your own speaker- Black</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$34.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KOAPz0">Shop Now at Amazon</a></div>
@@ -249,7 +249,7 @@
     <p><a target="_blank" href="https://amzn.to/2L1TCpp">Apple iPad Pro (11-inch, Wi-Fi, 64GB) - Space Gray (Latest Model)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$674.99</span><span class="ori_price">$799.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2L1TCpp">Shop Now at Amazon</a></div>
@@ -265,7 +265,7 @@
     <p><a target="_blank" href="https://amzn.to/2KSvMhg">Yesker YES-66 BBQ Grill Brush-18" -3 Stainless Steel Brushes in 1 - Best Barbecue Cleaner Tools Accessories...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$7.99</span><span class="ori_price">$23.63</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KSvMhg">Shop Now at Amazon</a></div>
@@ -281,7 +281,7 @@
     <p><a target="_blank" href="https://amzn.to/2KQsNG1">Crosstour CT9500 Real 4K Action Camera Underwater Camera (4K 20MP WiFi Underwater 40M Waterproof Anti-Shake...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$63.74</span><span class="ori_price">$109.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KQsNG1">Shop Now at Amazon</a></div>
@@ -297,7 +297,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZbaxQh">Orfeld Cordless Vacuum Cleaner, Stick Vacuum 2 in 1, Lightweight Bagless Vacuum with Ultra Wide LED Motor Brush,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$93.48</span><span class="ori_price">$159.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZbaxQh">Shop Now at Amazon</a></div>
@@ -313,7 +313,7 @@
     <p><a target="_blank" href="https://amzn.to/2Hmezud">Amped Wireless High Power Touch Screen AC750 Wi-Fi Router (TAP-R2)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$41.63</span><span class="ori_price">$159.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Hmezud">Shop Now at Amazon</a></div>
@@ -329,7 +329,7 @@
     <p><a target="_blank" href="https://amzn.to/2Hmf2wt">Sky Viper Hover Racer - AUTO Launch, Land, Hover Black Edition</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$24.98</span><span class="ori_price">$99.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Hmf2wt">Shop Now at Amazon</a></div>
@@ -345,7 +345,7 @@
     <p><a target="_blank" href="https://amzn.to/2U1BSii">Kandle by Ozeri Flex Reading Light in Graphite -- Designed for the Amazon Kindle (fits latest generation Kindle...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$13.87</span><span class="ori_price">$29.95</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2U1BSii">Shop Now at Amazon</a></div>
@@ -361,7 +361,7 @@
     <p><a target="_blank" href="https://amzn.to/2U1DjNI">Zinus Memory Foam 8 Inch Green Tea Mattress, Queen</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$132.80</span><span class="ori_price">$224.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2U1DjNI">Shop Now at Amazon</a></div>
@@ -377,7 +377,7 @@
     <p><a target="_blank" href="https://amzn.to/2Hm8kqq">Zinus Shalini Upholstered Diamond Stitched Platform Bed / Mattress Foundation / Easy Assembly / Strong Wood Slat Support...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$199.00</span><span class="ori_price">$400.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Hm8kqq">Shop Now at Amazon</a></div>
@@ -393,7 +393,7 @@
     <p><a target="_blank" href="https://amzn.to/2Z87kB4">DHP Emily Accent Chair with Split-Back and Chrome Legs, Grey Linen</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$105.29</span><span class="ori_price">$209.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z87kB4">Shop Now at Amazon</a></div>
@@ -409,7 +409,7 @@
     <p><a target="_blank" href="https://amzn.to/2L1U9I6">Adams Manufacturing 8500-48-3700 Plastic Quik-Fold Side Table, White</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$12.22</span><span class="ori_price">$24.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2L1U9I6">Shop Now at Amazon</a></div>
@@ -425,7 +425,7 @@
     <p><a target="_blank" href="https://amzn.to/2HmjBXz">Cuisinart CHW-14 Coffee Plus 10-Cup Thermal Programmable Coffeemaker and Hot Water System</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$90.99</span><span class="ori_price">$235.00</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2HmjBXz">Shop Now at Amazon</a></div>
@@ -441,7 +441,7 @@
     <p><a target="_blank" href="https://amzn.to/323YfXb">RAK Magnetic Pickup Tool with LED Lights - Telescoping Magnet Pick Up Gadget Tool</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$8.49</span><span class="ori_price">$19.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/323YfXb">Shop Now at Amazon</a></div>
@@ -457,7 +457,7 @@
     <p><a target="_blank" href="https://amzn.to/31ZjJ7y">Asus X553MA 15.6-inch HD Glossy (Intel N2830, 4GB RAM, 500GB HDD, DVD Burner) (Renewed)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$194.99</span><span class="ori_price">$349.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/31ZjJ7y">Shop Now at Amazon</a></div>
@@ -473,7 +473,7 @@
     <p><a target="_blank" href="https://amzn.to/33T7tXN">Neato Robotics D4 Connected Laser Guided Smart Robot Vacuum - Wi-Fi Connected, Ideal for Carpets, Hard Floors and Pet Hair,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$299.99</span><span class="ori_price">$529.99</span></address>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/33T7tXN">Shop Now at Amazon</a></div>
@@ -492,7 +492,7 @@
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/328acv1">Shop Now at Amazon</a></div>
